--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,23 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  database: openurban_development
+  adapter: postgis
+  host: localhost
+  username: cbryan
+  password: 86blysT3
+  postgis_extension: true
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  database: openurban_test
+  adapter: postgis
+  host: localhost
+  username: cbryan
+  password: 86blysT3
+  postgis_extension: true
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  database: openurban_production
+  adapter: postgis
+  host: localhost
+  username: openurban
+  password: openurban
+  postgis_extension: true
