--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,12 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgis
+  encoding: unicode
+  database: openurban_development
+  schema_search_path: "public, postgis"
+  postgis_extension: true
   pool: 5
-  timeout: 5000
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
-
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  host: localhost
+  username: openurban
+  password: dingbat$$$
+  su_username: openurban_su
+  su_password: dingbat$$$_su
