--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,21 @@
-# copy this file to `.env` and fill out each of these keys to configure the app
-DB_HOST=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+DB_HOST=localhost
+DB_NAME=openurban-mediawiki
+DB_USER=openurban
+DB_PASSWORD=testing
+
+STAGING_HOST=
+STAGING_DB_HOST=
+STAGING_DB_NAME=
+STAGING_DB_USER=
+STAGING_DB_PASSWORD=
+
+PRODUCTION_HOST=
+PRODUCTION_DB_HOST=
+PRODUCTION_DB_NAME=
+PRODUCTION_DB_USER=
+PRODUCTION_DB_PASSWORD=
+
+GA_TRACKING_ID=
+
+RECAPTCHA_PUBLIC_KEY=
+RECAPTCHA_PRIVATE_KEY=
